<resources>
    <string name="app_name">Train Journey Reminder</string>
    <string name="notification_channel_name">Channel</string>


    <string name="u_time">Time update</string>
    <string name="pnr_no">PNR No.</string>
    <string name="enter_message">Enter 10 digit PNR</string>
    <string name="search_button_text">Search</string>
    <string name="train_no">Train No:</string>
    <string name="train_name">Train Name:</string>
    <string name="date_of_journey">Date of Journey:</string>
    <string name="no_of_passengers">No. of passengers:</string>
    <string name="current_reservation_status">Current Reservation Status :</string>
    <string name="travel_class">Travel Class :</string>
    <string name="set_reminder">SET REMINDER</string>
    <string name="default_time_view">--:--</string>
    <string name="date_of_journey_caps">DATE OF JOURNEY</string>
    <string name="journey_class">JOURNEY CLASS :</string>
    <string name="reservation_status">Reservation Status</string>
    <string name="reminder_time">REMINDER TIME</string>
    <string name="number_of_passengers">NUMBER OF PASSENGERS :</string>
    <string name="refresh">REFRESH</string>
    <string name="passenger_no">Passenger No:</string>
    <string name="current_status">Current Status:</string>
    <string name="booking_status">Booking Status:</string>
    <string name="pnr">PNR :</string>
    <string name="train">TRAIN :</string>
    <string name="doj">DOJ :</string>
    <string name="class_">CLASS:</string>
    <string name="default_widget_text">Please select a ticket from Upcoming Journey</string>
    <string name="pnr_no_">PNR No. :</string>
    <string name="enter_pnr">please enter pnr</string>
    <string name="already_saved">Already saved</string>
    <string name="save_ticket">Save Ticket?</string>
    <string name="set_time">Set Time</string>
    <string name="ticket_saved">Ticket Saved</string>
    <string name="network_issue">Network issue</string>
    <string name="success">SUCCESS RETRIEVING</string>
    <string name="flushed_pnr">Flushed Pnr</string>
    <string name="invalid_pnr">Invalid Pnr</string>
    <string name="server_error">Server Error, Please try again After some time</string>
    <string name="network_error">Something Went Wrong, Please Try Again</string>
    <string name="pls_select_time">please select Time</string>
    <string name="database_update">Database Updated</string>
    <string name="ticket_deleted">Ticket Deleted</string>
    <string name="network_issue_call">Network Issue, please try again later</string>
    <string name="separator_description">Separates the boarding point from destination Point</string>
    <string name="directional_arrow">Directional Arrow</string>
    <string name="fab_description">Press this button to add ticket</string>
    <string name="decoration_view">decoration view</string>
    <string name="delete_button">Delete Button</string>
    <string name="uj_title">Upcoming Journey</string>
    <string name="at_title">Add Ticket</string>
    <string name="your_upcoming_journey">Your Upcoming Journey</string>
    <string name="not_text">Today you have to leave for your journey</string>
    <string name="cancel_text">Cancel</string>
    <string name="delete_option">Delete</string>
    <string name="delete_quest">Delete Ticket?</string>
    <string name="mobile_ad_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="chart_status">chart_status</string>
    <string name="boarding_point">boarding_point</string>
    <string name="destination_point">destination_point</string>
    <string name="passenger_data">passenger_data</string>
    <string name="train_number">train_number</string>
    <string name="number_of_passengers_key">number_of_passengers</string>
    <string name="pnr_number">pnr_number</string>
    <string name="train_name_key">train_name</string>
    <string name="reminder_time_key">reminder_time</string>
    <string name="ticket_id">ticket_id</string>
    <string name="boarding_code">boarding_code</string>
    <string name="destination_code">dest_code</string>
    <string name="date_of_journey_key">date_of_journey</string>
    <string name="class_name_key">class_name</string>
    <string name="alarm_id">alarm_id</string>
    <string name="class_code">class_code</string>
    <string name="network_fail">Network Failure</string>
    <string name="server_error_crashl">Server Error</string>
    <string name="save">Save</string>
    <string name="pnr_info">pnr_info</string>
    <string name="search_status_key">search_Status</string>
    <string name="reminder_time_s_key">reminder_time</string>
    <string name="product_sans">Product Sans Regular.ttf</string>
    <string name="play_reg">"Play-Regular.ttf"</string>


</resources>
